--- a/src/components/Symbol/Symbol.scss
+++ b/src/components/Symbol/Symbol.scss
@@ -4,14 +4,18 @@ $symbol-color: #FFFCC9;
   width: 60%;
   height: 60%;
 
+  animation: fadeIn .5s forwards;
+  opacity: 0;
+
   &__x {
     width: 100%;
     height: 100%;
     position: relative;
 
+
     &__line1 {
       background-color: $symbol-color;
-      width: 2rem;
+      width: 3vw;
       height: 100%;
       transform: translateX(-50%) rotate(45deg);
       left: 50%;
@@ -20,7 +24,7 @@ $symbol-color: #FFFCC9;
     
     &__line2 {
       background-color: $symbol-color;
-      width: 2rem;
+      width: 3vw;
       height: 100%;
       transform: translateX(-50%) rotate(-45deg);
       left: 50%;
@@ -30,11 +34,16 @@ $symbol-color: #FFFCC9;
 
   &__o {
     box-sizing: border-box;
-    border: 35px solid $symbol-color;
+    border: 3vw solid $symbol-color;
     border-radius: 100%;
 
     width: 95%;
     height: 95%;
 
   }
+}
+
+@keyframes fadeIn {
+  from {opacity:  0;}
+  to {opacity:  1;}
 }
