--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,10 @@
+body {
+  margin: 0;
+  background-color: #00EABB;
+}
+
 .container {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #00EABB;
-
-  margin: 5rem 0 5rem 0;
 }
