--- a/src/components/TicTacToe/TicTacToe.scss
+++ b/src/components/TicTacToe/TicTacToe.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-$grid-min-width: 80vw;
+$grid-min-width: 100%;
 $title-font: 'Press Start 2P', cursive;
 $player-font: 'Press Start 2P', cursive;
 
@@ -14,13 +14,14 @@ $player-font: 'Press Start 2P', cursive;
   &__title {
     text-align: center;
     font-family: $title-font;
-    font-size: 6vw;
+    font-size: 4vw;
+    padding: 2rem 0 2rem 0;
   }
   
   &__player {
     text-align: center;
     font-family: $player-font;
-    font-size: 3.5vw;
+    font-size: 3vw;
     padding: 1rem;
   }
 
@@ -41,7 +42,6 @@ $player-font: 'Press Start 2P', cursive;
     
     &:active {
       transition: all .1s ease-in;
-
       top: 5px;
       left: 5px;
       box-shadow: none;
@@ -54,7 +54,8 @@ $player-font: 'Press Start 2P', cursive;
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 15vw);
+  grid-template-rows: 15vw 15vw 15vw;
   gap: 10px;
 
   min-width: $grid-min-width;
@@ -62,7 +63,7 @@ $player-font: 'Press Start 2P', cursive;
   &__item {
     background-color: #00D4BC;
     display: flex;
-    height: $grid-min-width / 3;
+    height: 100%;
     justify-content: center;
     align-items: center;
   }
